--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
 
     </header>
 
+<main>
+    <section class="action">
+        <div class="action-content">
+            <h2>See It in Action</h2>
+            <p>Explore the live preview and imagine your<span class="action-content-line-break" >brand in this bold new look.</span></p>
+            <button class="action-button">Launch Live Preview</button>
+        </div>
+        <div class="action-image">
+            <img src="B12A01-landing-launchpad/Assets/wc-mini.png">
+        </div>
+
+    </section>
+
+    </main>
+
 </body>
 
 </html>
