--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
 
     </section>
 
+    <section class="productive-user-section">
+        <h3>Joined Thousands of Productive Users</h3>
+        <div class="productive-user-section-user-count">
+            <div class="productive-user-count">
+                <h1 class="user-count">50K</h1>
+                <p class="user-status">Active Users</p>
+            </div>
+            <div class="productive-user-count">
+                <h1 class="user-count">2M+</h1>
+                <p class="user-status">Focus Sessions</p>
+            </div>
+            <div class="productive-user-count">
+                <h1 class="user-count">95%</h1>
+                <p class="user-status">Satisfaction Rate</p>
+            </div>
+        </div>
+    </section>
+
     </main>
 
 </body>
