--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
          </div>
 
     </section>
+    <section class="logo">
+
+          <h1 class="logo-heading">LOGO</h1>
+          <p class="logo-text">Ready to elevate your online presence? Contact us today to discuss<span class="logo-text-break">your project and discover how we can bring your vision to life.</span></p>
+          <div class="logo-items">
+              <a class="items" href="">Home</a>
+              <a class="items" href="">About</a>
+              <a class="items" href="">How it Works</a>
+              <a class="items" href="">Services</a>
+          </div>
+    </section>
 
     </main>
 
