--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
 
     </main>
 
+    <footer>
+        <div class="button">
+            <button class="btn">Button</button>
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
